src/test/ui/lub-glb/old-lub-glb-hr-eq.stderr
error[E0308]: `match` arms have incompatible types
  --> $DIR/old-lub-glb-hr-eq.rs:13:14
   |
LL |       let z = match 22 {
   |  _____________-
LL | |         0 => x,
   | |              - this is found to be of type `for<'r, 's> fn(&'r u8, &'s u8)`
LL | |         _ => y,
   | |              ^ types differ
LL | |     };
   | |_____- `match` arms have incompatible types
   |
   = note: expected fn pointer `for<'r, 's> fn(&'r u8, &'s u8)`
              found fn pointer `for<'a> fn(&'a u8, &'a u8)`
help: consider removing the ``
   |
LL -         _ => y,
LL +         _ => y,
   | 

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
